# keep-agent-running

./: DEMO_USE_CASES.md  GOAL_DRIVEN_EXAMPLES.md  README.md  TESTING_STRATEGY.md  USE_CASES.md  example_usage.py  main.py  main2.py  pyproject.toml
archive/: main.py  protocols.py
documents/: DEMO_USE_CASES.md  GOAL_DRIVEN_EXAMPLES.md  INDEX.md  RUNTIME_REVIEW.md  STRATEGY_IMPLEMENTATION.md  STRATEGY_SUMMARY.md  TESTING_STRATEGY.md  TRAVERSAL_STRATEGIES.md
examples/: README.md  email_triage_demo.py  math_tutor_demo.py  recipe_finder_demo.py  shopping_list_demo.py  support_ticket_example.py
src/keep_agent_running/: __init__.py  config.py  mock_implementations.py  project_runtime.py  protocols.py  utils.py
src/keep_agent_running/models/: handlers.py
